fix: 解决和umi冲突问题及支持多主题

--- a/src/editor/index.less
+++ b/src/editor/index.less
@@ -1,11 +1,11 @@
-.monaco-editor .margin {
-  background-color: #202224 !important;
-}
-.monaco-editor,
-.monaco-editor-background,
-.monaco-editor .inputarea.ime-input {
-  background-color: #202224 !important;
-}
+// .monaco-editor .margin {
+//   background-color: #202224 !important;
+// }
+// .monaco-editor,
+// .monaco-editor-background,
+// .monaco-editor .inputarea.ime-input {
+//   background-color: #202224 !important;
+// }
 
 .monaco-editor .view-overlays .current-line {
   border: 1px solid green !important;
